s4-torture: test GetPrinterData with server handle and 0 keylength.

This is what e.g. Windows 10 does a lot.

Guenther

Signed-off-by: Guenther Deschner <gd@samba.org>
Reviewed-by: Andreas Schneider <asn@samba.org>

BUG: https://bugzilla.samba.org/show_bug.cgi?id=12245
(cherry picked from commit 518b2a3f5f3a4814e96546505487b775b5dbca40)